additional_components_deployment/principal-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: principal
  namespace: ocm-engine
spec:
  ingressClassName: nginx
  rules:
  - host: gaiax-ocm-engine.proofsense.in
    http:
      paths:
      - backend:
          service:
            name: principal-manager
            port:
              number: 3008
        path: /principal(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - gaiax-ocm-engine.proofsense.in
    secretName: ssi-abstraction-tls
